syntax = "proto3";
package contracts;
option go_package = "/contracts";

message Person {
    string id = 1;
    string name = 2;
    string age = 3;
}

message PersonRequest {
    string name = 1;
    string age = 2;
}

message PersonResponse {
    Person person = 1;
}

service PersonService {
    rpc CreatePerson(stream PersonRequest) returns (stream PersonResponse) {}
}

// protoc --go_out=. --go-grpc_out=. contracts/contract.proto